Fix application style white space

--- a/framework/skins/default/application.scss
+++ b/framework/skins/default/application.scss
@@ -120,6 +120,9 @@ th {
 	background-color: #fafafa;
 	height: 100%;
 	white-space: nowrap;
+	>* {
+		white-space: normal;
+	}
 }
 
 /* TODO tidy */
